2025-12-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp
	(override_available_type_sizes_request): Fix code style nits.
	Arrange equality comparisons to avoid inadvertent lvalue
	assignment.  Parenthesize formally complex expressions.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::possibly_break_line): Fix
	code style nits.  Parenthesize formally complex expressions.
	Arrange equality comparisons to avoid inadvertent lvalue
	assignment.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp
	(non_interpreted_char_node::non_interpreted_char_node): Fix code
	style nit.  Migrate input character handling constructor to deal
	in the type `unsigned char` rather than `char`.  Use explicitly
	unsigned literal in comparison.

	Continues the long process of fixing Savannah #67735.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (process_input_stack): Fix code style
	nit.  Eliminate unnecessary brace scopes that introduces no new
	local variables in switch `case`s.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::set_size): Fix code style
	nit.  Arrange equality comparison to avoid inadvertent lvalue
	assignment.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* README.git: Delete file not distributed in archives.
	* bootstrap.conf (checkout_only_file): Identify "FOR-RELEASE"
	instead of "README.git" as the indicator of a Git checkout.

	Fixes <https://savannah.gnu.org/bugs/?67787>.  Thanks to Dave
	Kemper for the report.

2025-12-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/grog/grog.pl: Improve heuristics for distinguishing
	mm(7) documents from those for other packages.
	(interpret_line): Recognize `APP`, `APPSK`, `AF`, `AS`,
	`COVEND`, `INITI`, `IND`, `INDP`, `INITR`, `SETR`, `GETHN`,