@@ -604,10 +604,8 @@ static void warn_if_font_name_deprecated(symbol nm)
 
 bool environment::set_font(symbol nm)
 {
-  if (was_line_interrupted) {
-    warning(WARN_FONT, "ignoring font selection on interrupted line");
+  if (was_line_interrupted)
     return true; // "no operation" is successful
-  }
   // TODO: Kill this off in groff 1.24.0 release + 2 years.
   if (is_device_ps_or_pdf)
     warn_if_font_name_deprecated(nm);
